# high-security-encryptor

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  NCMDownloader.spec  README.md  aes_gcm_merged_final.py  daily_ciphers.json  daily_keys.json  download_cache.txt  downloader_config.json  enigma.py  pyproject.toml  state.json  test_aes_gcm_security.py  users.json  文件比对.py  爬取图片Demo.py  爬取网易云音乐-最终版.py  爬取网易云音乐-稳定版.py  网易云音乐爬取-最终版.py  视频下载器-稳定版.py  视频下载迭代.py  音乐查重-安全回收站版.py  音乐查重.py
build_tools/: pyinstaller_entry.py  pyinstaller_gui_entry.py  pyinstaller_hse2_gui_entry.py
docs/: beginner_gui_usage.md  cryptography.md  hse1_to_hse2_migration.md  hse2_batch.md  hse2_batch_rewrap.md  hse2_cli.md  hse2_config.md  hse2_format.md  hse2_gui_integration.md  hse2_header.md  hse2_keyfile_rotation.md  hse2_main_gui_button_plan.md  hse2_rewrap.md  hse2_streaming.md  hse2_validation.md  hse2_wrapper_providers.md  kdf_profiles.md  keyfile_provider.md  operations.md  phase3_completion.md  phase4_completion.md  phase5_completion.md  phase6_completion.md  release_beginner_readme_zh.txt  release_checklist.md  release_notes_0.4.0.md  security_model.md  windows_dpapi_provider.md  windows_exe.md
examples/: beginner_encrypt_config.json  beginner_multi_file_encrypt_config.json  hardened_decrypt.json  hse1_to_hse2.json  hse2_batch_decrypt.json  hse2_batch_encrypt.json  hse2_batch_rewrap.json  hse2_decrypt.json  hse2_dpapi_encrypt.json  hse2_env_encrypt.json  hse2_file_encrypt.json  hse2_keyfile_encrypt.json  hse2_literal_encrypt.testing.json  hse2_rewrap.json  hse2_rotate_keyfile.json  hse2_validate.json  no_password_tables_decrypt.json  no_password_tables_encrypt.json
high_security_encryptor/: README.md  pyproject.toml
high_security_encryptor/docs/: batch_binding.md  streaming_format.md
high_security_encryptor/examples/: compatible_decrypt.json  compatible_encrypt.json  hardened_encrypt.json
high_security_encryptor/src/high_security_encryptor/: __init__.py  __main__.py  api.py  batch_artifacts.py  batch_binding.py  batch_decryption.py  batch_payloads.py  batch_workflow.py  config.py  folder_workflow.py  legacy.py  metadata_crypto.py  runtime_password_plan.py  security_mode.py  streaming_format.py
high_security_encryptor/tests/: test_batch_artifacts.py  test_batch_binding.py  test_batch_decryption.py  test_batch_workflow.py  test_cli.py  test_folder_decryption.py  test_password_sources.py  test_runtime_password_plan.py
tests/: test_aes_gcm_security.py  test_batch_artifacts.py  test_batch_payloads.py  test_batch_workflow.py  test_brute_force_guard.py  test_cli.py  test_config_schema.py  test_docs.py  test_folder_decryption.py  test_gui.py  test_hse1_to_hse2.py  test_hse2_archive_assembly_plan.py  test_hse2_archive_manifest.py  test_hse2_archive_payload.py  test_hse2_archive_plan.py  test_hse2_archive_plan_cli.py  test_hse2_archive_traversal.py  test_hse2_batch.py  test_hse2_batch_rewrap.py  test_hse2_cli.py  test_hse2_cli_inspect.py  test_hse2_combined_kdf.py  test_hse2_config.py  test_hse2_container_bytes.py  test_hse2_container_codec.py  test_hse2_container_header.py  test_hse2_create_cli.py  test_hse2_create_cli_empty_file.py  test_hse2_create_cli_validation_order.py  test_hse2_dpapi.py  test_hse2_file_io.py  test_hse2_gui_actions.py  test_hse2_gui_entry.py  test_hse2_gui_launcher.py  test_hse2_gui_tab.py  test_hse2_header.py  test_hse2_header_auth.py  test_hse2_header_backup.py  test_hse2_kdf_profiles.py  test_hse2_keyfile_kdf.py  (+27 more)
学习/: app.txt  for循环和range函数.py  if条件判断.py  note.txt  test.txt  test1.txt  while循环，break语句.py  函数.py  切片.py  列表.py  列表增删改查.py  变量类型.py  员工信息管理系统.py  员工管理系统进阶.py  图片识别.py  字典增删改查.py  字符串替换和格式化和input函数.py  学生管理.py  实操.py  异常捕获.py  抓取.py  数据图表.py  文件写操作1.py  文件写操作2.py  文件读操作.py  条件嵌套.py  爬图.py  类继承.py  装饰器.py
(+103 files in other folders)
