[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "high-security-encryptor"
version = "0.2.0"
description = "Hardened local encryption tool for batch file workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "pycryptodome>=3.20.0",
]
keywords = ["encryption", "aes-gcm", "batch", "backup", "local"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/Vendetta-86/high-security-encryptor"
Repository = "https://github.com/Vendetta-86/high-security-encryptor"
Issues = "https://github.com/Vendetta-86/high-security-encryptor/issues"

[project.scripts]
high-security-encryptor = "high_security_encryptor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
