[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "high-security-encryptor"
version = "0.5.0"
description = "Hardened local encryption tool for batch file workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "pycryptodome>=3.20.0",
    "tkinterdnd2>=0.4.0",
]
keywords = ["encryption", "aes-gcm", "batch", "backup", "local"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/Vendetta-86/high-security-encryptor"
Repository = "https://github.com/Vendetta-86/high-security-encryptor"
Issues = "https://github.com/Vendetta-86/high-security-encryptor/issues"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]
dev = [
    "detect-secrets>=1.5.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
high-security-encryptor = "high_security_encryptor.cli:main"
high-security-encryptor-gui = "high_security_encryptor.gui:main"
high-security-encryptor-hse2-gui = "high_security_encryptor.hse2_gui_launcher:main"
high-security-encryptor-hse2-create = "high_security_encryptor.hse2_create_cli:main"
high-security-encryptor-hse2-plan-archive = "high_security_encryptor.hse2_archive_plan_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
