[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "high-security-encryptor"
version = "0.1.0"
description = "Hardened local encryption tool prototype"
requires-python = ">=3.11"

[project.scripts]
high-security-encryptor = "high_security_encryptor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
